force-app/main/default/objects/LicenseTypeRequirements__c/LicenseTypeRequirements__c.object-meta.xml
<CustomObject>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <label>License Type Requirement</label>
    <nameField>
        <displayFormat>RE-{0000}</displayFormat>
        <label>License Type Requirement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>License Type Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>