force-app/main/default/objects/LicenseTypeRequirements__c/fields/ALIASRequirementNumber__c.field-meta.xml
<CustomField>
    <fullName>ALIASRequirementNumber__c</fullName>
    <formula>Requirement__r.ALIASRequirementNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ALIAS Requirement Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>