force-app/main/default/objects/LicenseTypeRequirements__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <label>Classification</label>
    <referenceTo>Classification__c</referenceTo>
    <relationshipName>Deficiencies</relationshipName>
    <type>Lookup</type>
</CustomField>