force-app/main/default/objects/LicenseTypeRequirements__c/fields/CurrentClassPrefix__c.field-meta.xml
<CustomField>
    <fullName>CurrentClassPrefix__c</fullName>
    <label>Current Class Prefix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>