force-app/main/default/objects/LicenseTypeRequirements__c/fields/CurrentPosition__c.field-meta.xml
<CustomField>
    <fullName>CurrentPosition__c</fullName>
    <label>Current Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EMP - EMPLOYMENT AGENCY PRINCIPAL</fullName>
            </value>
            <value>
                <fullName>ITR - INSTRUCTORS</fullName>
            </value>
            <value>
                <fullName>DTT - TEMPORARY DENTIST</fullName>
            </value>
            <value>
                <fullName>DHT - TEMPORARY DENTAL HYGIENIST</fullName>
            </value>
            <value>
                <fullName>ACR - AUCTIONEER</fullName>
            </value>
            <value>
                <fullName>AMD - PHYSICIAN&apos;S ASSISTANT</fullName>
            </value>
            <value>
                <fullName>AP - APPRENTICE</fullName>
            </value>
            <value>
                <fullName>BIC - BROKER-IN-CHARGE</fullName>
            </value>
            <value>
                <fullName>CBA - MOTOR VEHICLE BROKER AGENT</fullName>
            </value>
            <value>
                <fullName>CS - MOTOR VEHICLE SALESPERSON</fullName>
            </value>
            <value>
                <fullName>DRP - DISTRIBUTOR REPRESENTATIVE</fullName>
            </value>
            <value>
                <fullName>EIC - SALES AGENT EMPLOYEE/INDEPENDENT CONTRACTOR</fullName>
            </value>
            <value>
                <fullName>FR - FIELD REPRESENTATIVE</fullName>
            </value>
            <value>
                <fullName>FRP - FACTORY REPRESENTATIVE</fullName>
            </value>
            <value>
                <fullName>GVT - PHYSICIAN % GOVERNMENT</fullName>
            </value>
            <value>
                <fullName>I - INACTIVE</fullName>
            </value>
            <value>
                <fullName>MAT - MASSAGE THERAPIST</fullName>
            </value>
            <value>
                <fullName>MC - CERTIFIED MECHANIC</fullName>
            </value>
            <value>
                <fullName>MOP - MANAGING OPERATOR</fullName>
            </value>
            <value>
                <fullName>MR - REGISTERED MECHANIC</fullName>
            </value>
            <value>
                <fullName>MRC - REGISTERED CERTIFIED MECHANIC</fullName>
            </value>
            <value>
                <fullName>MS - SOLICITOR</fullName>
            </value>
            <value>
                <fullName>OPC - OUTSIDE PUBLIC CONTACT</fullName>
            </value>
            <value>
                <fullName>PA - PUBLIC ACCOUNTANT</fullName>
            </value>
            <value>
                <fullName>PB - PRINCIPAL BROKER</fullName>
            </value>
            <value>
                <fullName>PH - PHARMACIST-IN-CHARGE</fullName>
            </value>
            <value>
                <fullName>PR - PRINCIPAL</fullName>
            </value>
            <value>
                <fullName>RBS - REAL ESTATE BROKER SALESPERSON</fullName>
            </value>
            <value>
                <fullName>RES - RESIDENT</fullName>
            </value>
            <value>
                <fullName>RME - RESPONSIBLE MANAGING EMPLOYEE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>