force-app/main/default/objects/LicenseTypeRequirements__c/fields/DurationofTestEligibilityMonths__c.field-meta.xml
<CustomField>
    <fullName>DurationofTestEligibilityMonths__c</fullName>
    <formula>LicenseType__r.DurationofTestEligibilityMonths__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration of Test Eligibility (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>