force-app/main/default/objects/LicenseTypeRequirements__c/fields/MethodofLicensure__c.field-meta.xml
<CustomField>
    <fullName>MethodofLicensure__c</fullName>
    <description>PacPoint-FT082919 - Created for PVL phase 1</description>
    <label>Method of Licensure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MethodofLicensure</valueSetName>
    </valueSet>
</CustomField>