force-app/main/default/objects/LicenseTypeRequirements__c/fields/NeighborIsland__c.field-meta.xml
<CustomField>
    <fullName>NeighborIsland__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Neighbor Island</label>
    <type>Checkbox</type>
</CustomField>