force-app/main/default/objects/LicenseTypeRequirements__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <description>PacPoint-IC071619- Created for PVL phase 1</description>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A - Application Received</fullName>
            </value>
            <value>
                <fullName>B - Board Review</fullName>
            </value>
            <value>
                <fullName>E - Executive Officer Review</fullName>
            </value>
            <value>
                <fullName>X - Exam Phase</fullName>
            </value>
            <value>
                <fullName>L - License Review</fullName>
            </value>
            <value>
                <fullName>D - Dependency Review</fullName>
            </value>
            <value>
                <fullName>H - License Generation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>