force-app/main/default/objects/LicenseTypeRequirements__c/fields/RequestedClassPrefix__c.field-meta.xml
<CustomField>
    <fullName>RequestedClassPrefix__c</fullName>
    <label>Requested Class Prefix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>