force-app/main/default/objects/LicenseTypeRequirements__c/fields/RequestedPositionStatus__c.field-meta.xml
<CustomField>
    <fullName>RequestedPositionStatus__c</fullName>
    <label>Requested Position Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>D - DESIGNATED</fullName>
            </value>
            <value>
                <fullName>P - PRINCIPAL</fullName>
            </value>
            <value>
                <fullName>T - TEMPORARY</fullName>
            </value>
            <value>
                <fullName>X - EXTEND TEMPORARY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>