force-app/main/default/objects/LicenseTypeRequirements__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if you want this requirement to be set by default when a record is created. Note if &quot;Default&quot; is checked to true, this license type requirement will not be included in the number of deficiencies roll up.</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>