force-app/main/default/objects/LicenseTypeRequirements__c/fields/Requirement__c.field-meta.xml
<CustomField>
    <fullName>Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-IC072419- Created for PVL phase 1</description>
    <label>Requirement</label>
    <referenceTo>Requirements__c</referenceTo>
    <relationshipLabel>License Type Requirements</relationshipLabel>
    <relationshipName>LicenseTypeRequirements</relationshipName>
    <type>Lookup</type>
</CustomField>