force-app/main/default/objects/LicenseTypeRequirements__c/fields/Restriction__c.field-meta.xml
<CustomField>
    <fullName>Restriction__c</fullName>
    <label>Restriction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>D - RESTRICTED TO DENTAL CLASS SPECIALTY ONLY</fullName>
            </value>
            <value>
                <fullName>G - MEDICAL GASES ONLY</fullName>
            </value>
            <value>
                <fullName>M - MOBILE</fullName>
            </value>
            <value>
                <fullName>R - RESTRICTED</fullName>
            </value>
            <value>
                <fullName>T - NO PHYSIOTHERAPY</fullName>
            </value>
            <value>
                <fullName>V - VAULT FUMIGATION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>