force-app/main/default/objects/LicenseTypeRequirements__c/fields/SoleOwner__c.field-meta.xml
<CustomField>
    <fullName>SoleOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sole Owner</label>
    <type>Checkbox</type>
</CustomField>