force-app/main/default/objects/LicenseTypeRequirements__c/fields/SubRequirementNumber__c.field-meta.xml
<CustomField>
    <fullName>SubRequirementNumber__c</fullName>
    <formula>Requirement__r.SubRequirementNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Requirement Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>