force-app/main/default/objects/LicenseTypeRequirements__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>PacPoint-IC071619- Created for PVL phase 1</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADDC - Additional Class</fullName>
            </value>
            <value>
                <fullName>ADDP - Additional Special Privilege</fullName>
            </value>
            <value>
                <fullName>APPR - Apprentice or Appraiser Trainee or Intern</fullName>
            </value>
            <value>
                <fullName>BAP - Apprentice Barber</fullName>
            </value>
            <value>
                <fullName>BEP - Beauty Apprentice</fullName>
            </value>
            <value>
                <fullName>CCNM - Change BP Name</fullName>
            </value>
            <value>
                <fullName>CONV - Conversion</fullName>
            </value>
            <value>
                <fullName>CVN - Converted License Type</fullName>
            </value>
            <value>
                <fullName>DELQ - Deliquent Failure to Renew</fullName>
            </value>
            <value>
                <fullName>DP - Applying for Designated Principal</fullName>
            </value>
            <value>
                <fullName>DUAL - Dual (Sole/RME or RME/RME or RME/Sole)</fullName>
            </value>
            <value>
                <fullName>EVA - Apprentice Elevator Mechanic</fullName>
            </value>
            <value>
                <fullName>EXPER - Experience Certificate</fullName>
            </value>
            <value>
                <fullName>GDS2O - GD to Sole Owner</fullName>
            </value>
            <value>
                <fullName>LICC - New License after Cancelation/Close Business</fullName>
            </value>
            <value>
                <fullName>LICF - New License after Forfeiture</fullName>
            </value>
            <value>
                <fullName>LICN - New License</fullName>
            </value>
            <value>
                <fullName>MAP - Apprentice Massage Therapist</fullName>
            </value>
            <value>
                <fullName>PD2SO - PD to Sole Owner</fullName>
            </value>
            <value>
                <fullName>PDREL - Preliminary Decision: Real Estate Salesperson or Broker</fullName>
            </value>
            <value>
                <fullName>PHA - Assistant Pharmacist</fullName>
            </value>
            <value>
                <fullName>R2DBA - RME to Sole Owner</fullName>
            </value>
            <value>
                <fullName>RB2SO - RB to Sole Owner</fullName>
            </value>
            <value>
                <fullName>REAC - Reactivation</fullName>
            </value>
            <value>
                <fullName>RECOG - Temporary Recognition for Real Estate Appraisers</fullName>
            </value>
            <value>
                <fullName>RELOC - Business Site Relocation</fullName>
            </value>
            <value>
                <fullName>RNEW - Renewal</fullName>
            </value>
            <value>
                <fullName>RSTRA - Restore Active</fullName>
            </value>
            <value>
                <fullName>RXMOD - APRN-RX Collegial Agreement Modification</fullName>
            </value>
            <value>
                <fullName>TEMP - Temporary Permit to Practice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>