force-app/main/default/objects/LicenseTypeRequirements__c/fields/TypeofEntity__c.field-meta.xml
<CustomField>
    <fullName>TypeofEntity__c</fullName>
    <description>PacPoint-FT082919 - Created for PVL phase 1
PacPoint-KN091319 - Modified for PVL phase 1</description>
    <label>Type of Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A - Association</fullName>
            </value>
            <value>
                <fullName>C - Corporation</fullName>
            </value>
            <value>
                <fullName>I - Individual</fullName>
            </value>
            <value>
                <fullName>J - Joint Venture</fullName>
            </value>
            <value>
                <fullName>O - Organization (LLC)</fullName>
            </value>
            <value>
                <fullName>P - Limited Partnership/Partnership</fullName>
            </value>
            <value>
                <fullName>Q - Limited Liability Partnership</fullName>
            </value>
            <value>
                <fullName>T - Trust</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>